--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <!-- saved from url=(0021)http://kimm.ru/prog4/ -->
 <html lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="index/entrails/css/style200401a.css">
-  <script src="index/entrails/js/jquery-3.2.1.min.js"></script>
+  <!--script src="index/entrails/js/jquery-3.2.1.min.js"></script-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <script>
 var pAth = "index/entrails/"
